--- a/nodejs/routing/package.json
+++ b/nodejs/routing/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "nodemon": "nodemon app.js"
+    "nodemon": "nodemon server.js"
   },
   "author": "Dash",
   "license": "ISC",
