--- a/nodejs/routing/package.json
+++ b/nodejs/routing/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-js",
+  "name": "js",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "nodemon": "nodemon server.js"
+    "nodemon": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "Dash",
   "license": "ISC",
@@ -14,5 +14,6 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2"
-  }
+  },
+  "description": ""
 }
