--- a/nodejs/routing/package.json
+++ b/nodejs/routing/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "description": ""
 }
