--- a/nodejs/routing/package.json
+++ b/nodejs/routing/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^7.4.1",
     "morgan": "^1.10.0"
   },
   "description": ""
