--- a/nodejs/routing/package.json
+++ b/nodejs/routing/package.json
@@ -12,6 +12,8 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
