--- a/nodejs/blog/package.json
+++ b/nodejs/blog/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "nodemon": "^3.0.1"
   }
 }
