--- a/nodejs/blog/package.json
+++ b/nodejs/blog/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.3",
     "nodemon": "^3.0.1"
   }
 }
